--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,12 @@ services:
     name: visual-product-measurement
     env: python
     plan: free
+
+    pythonVersion: 3.11
+
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-    runtime: python-3.11.9
+
+    envVars:
+      - key: GEMINI_API_KEY
+        sync: false
