--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,9 @@ services:
     name: visual-product-measurement
     env: python
     plan: free
-
-    pythonVersion: 3.11
-
+    runtime: python-3.11
     buildCommand: pip install -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-
     envVars:
       - key: GEMINI_API_KEY
         sync: false
